update home page for add new filter

--- a/themes/uoc/layouts/cercador/single.html
+++ b/themes/uoc/layouts/cercador/single.html
@@ -16,6 +16,11 @@
 							<h3>{{ T "uoc_ri_cercadortab_filtres" }}</h3>
 						</a>
 					</div>
+					<div class="filters-main__box border-green box-green-selected col-xs-12">
+						<a id="tab-2" href="#tab-content-2" role="tab" aria-controls="tab-content-2" aria-selected="true" data-tab-trigger="" class="tab is-active cercadorFiltres">
+							<h3>Nulla vel accumsan dui</h3>
+						</a>
+					</div>
 					<div class="filters-main__box border-green col-xs-12">
 						<a id="tab-3" href="#tab-content-3" role="tab" aria-controls="tab-content-3" aria-selected="false" data-tab-trigger="" class="tab cercadorTextual">
 							<h3>{{ T "uoc_ri_cercadortab_text" }}</h3>
