--- a/themes/uoc/layouts/cercador/single.html
+++ b/themes/uoc/layouts/cercador/single.html
@@ -18,7 +18,7 @@
 					</div>
 					<div class="filters-main__box border-green box-green-selected col-xs-12">
 						<a id="tab-2" href="#tab-content-2" role="tab" aria-controls="tab-content-2" aria-selected="true" data-tab-trigger="" class="tab is-active cercadorFiltres">
-							<h3>Nulla vel accumsan dui</h3>
+							<h3>Nulla vel accumsan dui Nulla vel accumsan dui</h3>
 						</a>
 					</div>
 					<div class="filters-main__box border-green col-xs-12">
