--- a/themes/uoc/layouts/principal/single.html
+++ b/themes/uoc/layouts/principal/single.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="filters-main__box border-green">
 						<a id="tab-3" href="#tab-content-3" role="tab" aria-controls="tab-content-3" aria-selected="true" data-tab-trigger="" class="tab cercadorFiltres">
-							<h3>Albira Solutions Albira Solutions Albira Solutions </h3>
+							<h3>Albira Solutions Albira Solutions </h3>
 						</a>
 					</div>
 					<div class="filters-main__box border-green">
