--- a/themes/uoc/layouts/principal/single.html
+++ b/themes/uoc/layouts/principal/single.html
@@ -37,9 +37,8 @@
 						<p><a id="tab-1" href="#tab-content-1" role="tab" aria-controls="tab-content-1" aria-selected="true" data-tab-trigger="" class="tab is-active cercaFiltres"><span class="icon icon--arrow-down"></span></a></p>
 					</div>
 					<div class="filters-main__box border-green">
-						<a id="tab-3" href="#tab-content-3" role="tab" aria-controls="tab-content-3" aria-selected="true" data-tab-trigger="" class="tab cercadorFiltres">
-							<h3>Albira Solutions Albira Solutions Albira Solutions  </h3>
-						</a>
+						<h3>{{ T "uoc_ri_cercadortab_sectors" }}</h3>
+						<p><a id="tab-3" href="#tab-content-3" role="tab" aria-controls="tab-content-3" aria-selected="true" data-tab-trigger="" class="tab cercadorFiltres"></p>
 					</div>
 					<div class="filters-main__box border-green">
 						<h3>{{ T "uoc_ri_cercadortab_text" }}</h3>
