--- a/themes/uoc/layouts/principal/single.html
+++ b/themes/uoc/layouts/principal/single.html
@@ -119,7 +119,7 @@
 									<h4>{{ T "uoc_ri_cercador_cercapersector" }}</h4>
 									<ul class="tag-list centre">
 										{{ range $i, $el := .Params.sector_productiu }}
-											<li>{{$el.display_name}}</li>
+											<li>{{$el.value}}</li>
 										{{ end }}
 									</ul>
 								</div>
