update gitignore and test content

--- a/themes/uoc/layouts/principal/single.html
+++ b/themes/uoc/layouts/principal/single.html
@@ -118,7 +118,7 @@
 								<div class="more-filter-options">
 									<h4>{{ T "uoc_ri_cercador_cercapersector" }}</h4>
 									<ul class="tag-list centre">
-										{{ range $i, $el := .Params.sector_productiu }}
+										{{ range $i, $el := .Params.albiraContent }}
 											<li>{{$el.value}}</li>
 										{{ end }}
 									</ul>
