--- a/themes/uoc/layouts/solucions/single.html
+++ b/themes/uoc/layouts/solucions/single.html
@@ -116,6 +116,7 @@
                       <div class="card-in-acordeon js-changeVist">
                         <div class="row">
                           {{ range $i, $solTec :=  $solucions_tecnologiques }}
+                          {{ if isset $solTec "value" }}
                           <div class="col-xs-12 col-md-4">
                             <div class="uoc_card_placeholder">
                               <img src="{{$solTec.img_background}}"/>
@@ -125,6 +126,7 @@
                               <div class="line-medium"></div>
                             </div>
                           </div>
+                          {{ end }}
                           {{ end }}
                         </div>
                       </div>
@@ -138,6 +140,7 @@
                       <div class="card-in-acordeon js-changeVist">
                         <div class="row">
                           {{ range $i, $pat :=  $patents }}
+                          {{ if isset $pat "value" }}
                           <div class="col-xs-12 col-md-4">
                             <div class="uoc_card_placeholder">
                               <img src="{{$pat.img_background}}"/>
@@ -147,6 +150,7 @@
                               <div class="line-medium"></div>
                             </div>
                           </div>
+                          {{ end }}
                           {{ end }}
                         </div>
                       </div>
@@ -160,6 +164,7 @@
                       <div class="card-in-acordeon js-changeVist">
                         <div class="row">
                           {{ range $i, $serv :=  $serveis }}
+                          {{ if isset $serv "value" }}
                           <div class="col-xs-12 col-md-4">
                             <div class="uoc_card_placeholder">
                                 <img src="{{$serv.img_background}}"/>
@@ -169,6 +174,7 @@
                               <div class="line-medium"></div>
                             </div>
                           </div>
+                          {{ end }}
                           {{ end }}
                         </div>
                       </div>
@@ -185,6 +191,7 @@
                       <div class="card-in-acordeon js-changeVist">
                         <div class="row">
                           {{ range $i, $spin :=  $spin_offs }}
+                          {{ if isset $spin "value" }}
                           <div class="col-xs-12 col-md-4">
                             <div class="uoc_card_placeholder">
                               <div class="title">{{$spin.display_name}}</div>
@@ -193,6 +200,7 @@
                               <div class="line-medium"></div>
                             </div>
                           </div>
+                          {{ end }}
                           {{ end }}
                         </div>
                       </div>
